--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "method-override": "^3.0.0",
-    "mongoose": "^7.6.2"
+    "method-override": "^3.0.0"
   }
 }
